--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi.csproj
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Controls.Ribbon" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -99,6 +100,12 @@
     </Compile>
     <Compile Include="ThanhVien\ThongTinThanhVien.xaml.cs">
       <DependentUpon>ThongTinThanhVien.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TimKiemThogKe\ThongKeThanhVienHoatDong.xaml.cs">
+      <DependentUpon>ThongKeThanhVienHoatDong.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TimKiemThogKe\TimKiem.xaml.cs">
+      <DependentUpon>TimKiem.xaml</DependentUpon>
     </Compile>
     <Page Include="CLB\CLB.xaml">
       <SubType>Designer</SubType>
@@ -172,6 +179,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="TimKiemThogKe\ThongKeThanhVienHoatDong.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TimKiemThogKe\TimKiem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -200,8 +215,53 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\add.png" />
+    <Resource Include="Images\city.png" />
+    <Resource Include="Images\delete.png" />
+    <Resource Include="Images\edit.png" />
     <Resource Include="Images\help.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\manager.png" />
+    <Resource Include="Images\people.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\target.png" />
+    <Resource Include="Images\walkperson.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\group.png" />
+    <Resource Include="Images\income.png" />
+    <Resource Include="Images\outcome.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\check.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\groupmember.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\meeting bch.png" />
+    <Resource Include="Images\meeting.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\meeting bch member.png" />
+    <Resource Include="Images\meeting member.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\search.png" />
+    <Resource Include="Images\statistic.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\down.png" />
+    <Resource Include="Images\up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\exit.png" />
+    <Resource Include="Images\setting.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
