Complete functions hop_tn

--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi.csproj
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi.csproj
@@ -81,6 +81,7 @@
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
     <Compile Include="DATA\HopBCHDAO.cs" />
+    <Compile Include="DATA\HopTNDAO.cs" />
     <Compile Include="DATA\hop_bch.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
@@ -163,6 +164,9 @@
     <Compile Include="UI\Hop\UC_Datagrid_HopBCH.xaml.cs">
       <DependentUpon>UC_Datagrid_HopBCH.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Hop\UC_Datagrid_HopTN.xaml.cs">
+      <DependentUpon>UC_Datagrid_HopTN.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\KhuPho\KhuPho.xaml.cs">
       <DependentUpon>KhuPho.xaml</DependentUpon>
     </Compile>
@@ -234,6 +238,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Hop\UC_Datagrid_HopBCH.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Hop\UC_Datagrid_HopTN.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
