Thong ke muc do hoat dong

--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/App.config
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/App.config
@@ -14,6 +14,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="hoi_nguoi_cao_tuoiEntities" connectionString="metadata=res://*/DATA.ModelDB.csdl|res://*/DATA.ModelDB.ssdl|res://*/DATA.ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=hoi_nguoi_cao_tuoi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="hoi_nguoi_cao_tuoiEntities" connectionString="metadata=res://*/DATA.ModelDB.csdl|res://*/DATA.ModelDB.ssdl|res://*/DATA.ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=hoi_nguoi_cao_tuoi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="QuanLyHoiNguoiCaoTuoi.Properties.Settings.hoi_nguoi_cao_tuoiConnectionString"
+      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=hoi_nguoi_cao_tuoi;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
