--- a/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi.csproj
+++ b/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi/QuanLyHoiNguoiCaoTuoi.csproj
@@ -171,6 +171,9 @@
     <Compile Include="DATA\V_ThongKe_MucDoHoatDong.cs">
       <DependentUpon>ModelDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="DATA\V_ThongKe_TongDiemHoatDong.cs">
+      <DependentUpon>ModelDB.tt</DependentUpon>
+    </Compile>
     <Compile Include="MD5Cal.cs" />
     <Compile Include="RandomString.cs" />
     <Compile Include="UI\CLB\CLB.xaml.cs">
@@ -291,8 +294,17 @@
       <DependentUpon>R_MucDoHoatDong.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="UI\TimKiemThongKe\R_TongDiemHoatDong.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>R_TongDiemHoatDong.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UI\TimKiemThongKe\ThongKeThanhVienHoatDong.xaml.cs">
       <DependentUpon>ThongKeThanhVienHoatDong.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\TimKiemThongKe\ThongKeTongDiemHoatDong.xaml.cs">
+      <DependentUpon>ThongKeTongDiemHoatDong.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\TimKiemThongKe\TimKiem.xaml.cs">
       <DependentUpon>TimKiem.xaml</DependentUpon>
@@ -453,6 +465,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UI\TimKiemThongKe\ThongKeTongDiemHoatDong.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UI\TimKiemThongKe\TimKiem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -479,6 +495,10 @@
     <EmbeddedResource Include="UI\TimKiemThongKe\R_MucDoHoatDong.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>R_MucDoHoatDong.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\TimKiemThongKe\R_TongDiemHoatDong.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>R_TongDiemHoatDong.cs</LastGenOutput>
     </EmbeddedResource>
     <EntityDeploy Include="DATA\ModelDB.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
